--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,6 +27,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-    "homepage":"https://gksmfqhfl797.github.io/uni"
+  }
 }
