--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "hompage":"https://gksmfqhfl797.github.io/uni"
 }
