--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
       "last 1 safari version"
     ]
   },
-  "hompage":"https://gksmfqhfl797.github.io/uni"
+  "homepage" : "http://gksmfqhfl797.github.io/uni"
 }
